--- a/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
+++ b/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
@@ -1,18 +1,18 @@
 ﻿<UserControl x:Class="SonarLint.VisualStudio.IssueVisualization.IssueVisualizationControl.IssueVisualizationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:shell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.14.0"
-             xmlns:viewModels="clr-namespace:SonarLint.VisualStudio.IssueVisualization.IssueVisualizationControl.ViewModels"
+             xmlns:vsShell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.14.0"
+             xmlns:vsImaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
+             xmlns:vsCatalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
+             xmlns:vsTheming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
+             xmlns:vsUtilities="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
              xmlns:visualization="clr-namespace:SonarLint.VisualStudio.IssueVisualization.IssueVisualizationControl"
-             xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
-             xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
-             xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
-             xmlns:utilities="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
-             xmlns:wpf="clr-namespace:SonarLint.VisualStudio.Core.WPF;assembly=SonarLint.VisualStudio.Core"
+             xmlns:viewModels="clr-namespace:SonarLint.VisualStudio.IssueVisualization.IssueVisualizationControl.ViewModels"
+             xmlns:core="clr-namespace:SonarLint.VisualStudio.Core.WPF;assembly=SonarLint.VisualStudio.Core"
              DataContext="{Binding ViewModel, RelativeSource={RelativeSource Mode=Self}}" x:ClassModifier="internal">
     <UserControl.Resources>
-        <utilities:BrushToColorConverter x:Key="BrushToColorConverter"/>
-        <wpf:BoolToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" TrueValue="Collapsed" FalseValue="Visible" />
+        <vsUtilities:BrushToColorConverter x:Key="BrushToColorConverter"/>
+        <core:BoolToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" TrueValue="Collapsed" FalseValue="Visible" />
         <visualization:SeverityToMonikerConverter x:Key="SeverityToMonikerConverter" />
 
         <!-- Base styles -->
@@ -21,33 +21,33 @@
             <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
             <Setter Property="TextTrimming" Value="None"/>
             <Setter Property="LineStackingStrategy" Value="MaxHeight"/>
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static shell:VsBrushes.CaptionTextKey}}"/>
-            <Setter Property="FontSize" Value="{DynamicResource {x:Static shell:VsFonts.EnvironmentFontSizeKey}}"/>
-            <Setter Property="FontFamily" Value="{DynamicResource {x:Static shell:VsFonts.EnvironmentFontFamilyKey}}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.CaptionTextKey}}"/>
+            <Setter Property="FontSize" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentFontSizeKey}}"/>
+            <Setter Property="FontFamily" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentFontFamilyKey}}"/>
         </Style>
 
         <Style x:Key="BaseTitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
-            <Setter Property="FontSize" Value="{DynamicResource {x:Static shell:VsFonts.CaptionFontSizeKey}}"/>
-            <Setter Property="FontFamily" Value="{DynamicResource {x:Static shell:VsFonts.CaptionFontFamilyKey}}"/>
-            <Setter Property="FontWeight" Value="{DynamicResource {x:Static shell:VsFonts.EnvironmentBoldFontWeightKey}}"/>
+            <Setter Property="FontSize" Value="{DynamicResource {x:Static vsShell:VsFonts.CaptionFontSizeKey}}"/>
+            <Setter Property="FontFamily" Value="{DynamicResource {x:Static vsShell:VsFonts.CaptionFontFamilyKey}}"/>
+            <Setter Property="FontWeight" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentBoldFontWeightKey}}"/>
         </Style>
 
         <Style x:Key="BaseNumberInShapeTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontWeight" Value="{DynamicResource {x:Static shell:VsFonts.EnvironmentBoldFontWeightKey}}"/>
+            <Setter Property="FontWeight" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentBoldFontWeightKey}}"/>
         </Style>
 
         <Style x:Key="BaseShapeStyle" TargetType="Shape">
-            <Setter Property="Fill" Value="{DynamicResource {x:Static shell:VsBrushes.ComboBoxBackgroundKey}}"/>
-            <Setter Property="Stroke" Value="{DynamicResource {x:Static shell:VsBrushes.ComboBoxBorderKey}}"/>
+            <Setter Property="Fill" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBackgroundKey}}"/>
+            <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBorderKey}}"/>
             <Style.Triggers>
                 <DataTrigger Binding="{Binding Path=IsMouseOver, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True">
-                    <Setter Property="Stroke" Value="{DynamicResource {x:Static shell:VsBrushes.StartPageButtonPinHoverKey}}"/>
+                    <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Path=IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True">
-                    <Setter Property="Stroke" Value="{DynamicResource {x:Static shell:VsBrushes.StartPageButtonPinHoverKey}}"/>
+                    <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -64,11 +64,11 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static shell:VsBrushes.InactiveCaptionTextKey}}" />
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.InactiveCaptionTextKey}}" />
         </Style>
 
         <Style x:Key="OverlayGridStyle" TargetType="Grid">
-            <Setter Property="Background" Value="{DynamicResource {x:Static shell:VsBrushes.BrandedUIBackgroundKey}}" />
+            <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.BrandedUIBackgroundKey}}" />
             <Setter Property="Visibility" Value="Collapsed" />
             <Style.Triggers>
                 <DataTrigger Binding="{Binding CurrentIssue, TargetNullValue=1}" Value="1">
@@ -122,12 +122,12 @@
                     <Setter Property="IsSelected" Value="False"/>
                 </DataTrigger>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="{DynamicResource {x:Static shell:VsBrushes.CommandBarHoverOverSelectedKey}}"/>
-                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static shell:VsBrushes.CommandBarHoverOverSelectedIconBorderKey}}" />
+                    <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarHoverOverSelectedKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarHoverOverSelectedIconBorderKey}}" />
                 </Trigger>
                 <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="{DynamicResource {x:Static shell:VsBrushes.StartPageSelectedItemBackgroundKey}}"/>
-                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static shell:VsBrushes.StartPageSelectedItemBackgroundKey}}" />
+                    <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemBackgroundKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemBackgroundKey}}" />
                 </Trigger>
                 <DataTrigger Binding="{Binding Location.IsNavigable}" Value="False">
                     <Setter Property="IsSelected" Value="False"/>
@@ -149,10 +149,10 @@
                 <DataTrigger Binding="{Binding Location.IsNavigable}" Value="False">
                     <Setter Property="FontStyle" Value="Italic" />
                     <Setter Property="FontWeight" Value="Regular" />
-                    <Setter Property="Foreground" Value="{DynamicResource {x:Static shell:VsBrushes.CommandBarTextInactiveKey}}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarTextInactiveKey}}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Path=IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True">
-                    <Setter Property="Foreground" Value="{DynamicResource {x:Static shell:VsBrushes.StartPageSelectedItemStrokeKey}}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemStrokeKey}}"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -165,8 +165,8 @@
         </Style>
     </UserControl.Resources>
     <Grid UseLayoutRounding="True" 
-          Background="{DynamicResource {x:Static shell:VsBrushes.BrandedUIBackgroundKey}}"
-          theming:ImageThemingUtilities.ImageBackgroundColor="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}">
+          Background="{DynamicResource {x:Static vsShell:VsBrushes.BrandedUIBackgroundKey}}"
+          vsTheming:ImageThemingUtilities.ImageBackgroundColor="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}">
         <Grid x:Name="Overlay" Style="{StaticResource OverlayGridStyle}" Panel.ZIndex="1000">
             <TextBlock Style="{StaticResource OverlayTextStyle}" Text="Please select an issue from the Error List" />
         </Grid>
@@ -188,7 +188,7 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <imaging:CrispImage Grid.Column="0" 
+                    <vsImaging:CrispImage Grid.Column="0" 
                                         Height="16" Width="16"
                                         Moniker="{Binding Severity, Converter={StaticResource SeverityToMonikerConverter}, Mode=OneWay}" 
                                         Margin="0,0,5,0"/>
@@ -216,7 +216,7 @@
                                 <ColumnDefinition Name="FileType" Width="Auto"/>
                                 <ColumnDefinition Name="FileName" Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <imaging:CrispImage Grid.Column="0" 
+                            <vsImaging:CrispImage Grid.Column="0" 
                                             Height="16" Width="16"
                                             Moniker="{Binding Icon}"/>
 
@@ -234,9 +234,9 @@
                                 <ColumnDefinition Name="Description" Width="*"/>
                                 <ColumnDefinition Name="NonNavigableWarningIcon" Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <imaging:CrispImage Grid.Column="0" 
+                            <vsImaging:CrispImage Grid.Column="0" 
                                                 Height="16" Width="16"
-                                                Moniker="{x:Static catalog:KnownMonikers.ExpandRight}"/>
+                                                Moniker="{x:Static vsCatalog:KnownMonikers.ExpandRight}"/>
                             <Viewbox Grid.Column="1" Width="14" Height="14" Margin="5,0,0,0">
                                 <Grid Width="16" Height="16">
                                     <Rectangle Style="{StaticResource StepNumberRectangleStyle}"/>
@@ -246,9 +246,9 @@
                             <TextBlock Grid.Column="2" 
                                        Style="{StaticResource BaseLocationItemTextBlockStyle}" 
                                        Text="{Binding Location.Location.Message}"/>
-                            <imaging:CrispImage Grid.Column="3"
+                            <vsImaging:CrispImage Grid.Column="3"
                                                 Height="16" Width="16"
-                                                Moniker="{x:Static catalog:KnownMonikers.DocumentWarning}" 
+                                                Moniker="{x:Static vsCatalog:KnownMonikers.DocumentWarning}" 
                                                 Visibility="{Binding Location.IsNavigable, Converter={StaticResource InvertedBooleanToVisibilityConverter}, Mode=OneWay}"/>
                         </Grid>
                     </DataTemplate>
