Change IsNavigable to rely on SnapshotSpan

--- a/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
+++ b/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
@@ -12,8 +12,13 @@
              DataContext="{Binding ViewModel, RelativeSource={RelativeSource Mode=Self}}" x:ClassModifier="internal">
     <UserControl.Resources>
         <vsUtilities:BrushToColorConverter x:Key="BrushToColorConverter"/>
-        <core:BoolToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" TrueValue="Collapsed" FalseValue="Visible" />
         <visualization:SeverityToMonikerConverter x:Key="SeverityToMonikerConverter" />
+        <visualization:SpanToNavigabilityConverter x:Key="SpanToNavigabilityConverter"/>
+
+        <core:AggregatorValueConverter x:Key="SpanToInvertedVisibilityConverter">
+            <visualization:SpanToNavigabilityConverter />
+            <core:BoolToVisibilityConverter TrueValue="Collapsed" FalseValue="Visible" />
+        </core:AggregatorValueConverter>
 
         <!-- Base styles -->
 
@@ -128,14 +133,14 @@
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Mode=Self}}" Value="True"/>
-                        <Condition Binding="{Binding Location.IsNavigable}" Value="True"/>
+                        <Condition Binding="{Binding Location.Span, Converter={StaticResource SpanToNavigabilityConverter}}" Value="True"/>
                     </MultiDataTrigger.Conditions>
                     <MultiDataTrigger.Setters>
                         <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemBackgroundKey}}"/>
                         <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemBackgroundKey}}" />
                     </MultiDataTrigger.Setters>
                 </MultiDataTrigger>
-                <DataTrigger Binding="{Binding Location.IsNavigable}" Value="False">
+                <DataTrigger Binding="{Binding Location.Span, Converter={StaticResource SpanToNavigabilityConverter}}" Value="False">
                     <Setter Property="IsSelected" Value="False"/>
                     <Setter Property="IsEnabled" Value="False"/>
                     <Setter Property="Focusable" Value="false"/>
@@ -152,7 +157,7 @@
             <Setter Property="Margin" Value="5,0,0,0"/>
             <Setter Property="Padding" Value="1"/>
             <Style.Triggers>
-                <DataTrigger Binding="{Binding Location.IsNavigable}" Value="False">
+                <DataTrigger Binding="{Binding Location.Span, Converter={StaticResource SpanToNavigabilityConverter}}" Value="False">
                     <Setter Property="FontStyle" Value="Italic" />
                     <Setter Property="FontWeight" Value="Regular" />
                     <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarTextInactiveKey}}"/>
@@ -160,7 +165,7 @@
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding Path=IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True"/>
-                        <Condition Binding="{Binding Location.IsNavigable}" Value="True"/>
+                        <Condition Binding="{Binding Location.Span, Converter={StaticResource SpanToNavigabilityConverter}}" Value="True"/>
                     </MultiDataTrigger.Conditions>
                     <MultiDataTrigger.Setters>
                         <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageSelectedItemStrokeKey}}"/>
@@ -257,7 +262,7 @@
                             <vsImaging:CrispImage Grid.Column="2"
                                                 Height="16" Width="16"
                                                 Moniker="{x:Static vsCatalog:KnownMonikers.DocumentWarning}" 
-                                                Visibility="{Binding Location.IsNavigable, Converter={StaticResource InvertedBooleanToVisibilityConverter}, Mode=OneWay}"/>
+                                                Visibility="{Binding Location.Span, Converter={StaticResource SpanToInvertedVisibilityConverter}, Mode=OneWay}"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.Resources>
