--- a/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
+++ b/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
@@ -100,6 +100,21 @@
 
         <!-- Data grid items styles -->
 
+        <Style x:Key="PrimaryLocationLabelStyle" TargetType="Label">
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.CaptionTextKey}}"/>
+            <Setter Property="FontSize" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentFontSizeKey}}"/>
+            <Setter Property="FontFamily" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentFontFamilyKey}}"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="ForceCursor" Value="true"/>
+            <Setter Property="ToolTip" Value="Click to navigate to issue location" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarHoverOverSelectedKey}}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="IssueDescriptionDockPanelStyle" TargetType="DockPanel">
             <Setter Property="Margin" Value="5"/>
         </Style>
@@ -221,15 +236,30 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <vsImaging:CrispImage Grid.Column="0" 
-                                        Height="16" Width="16"
-                                        Moniker="{Binding Severity, Converter={StaticResource SeverityToMonikerConverter}, Mode=OneWay}" 
-                                        Margin="0,0,5,0"/>
-                    <TextBlock Grid.Column="1" Style="{StaticResource BaseTextBlockStyle}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" 
+                           Grid.Column="0" 
+                           Grid.ColumnSpan="2" 
+                           Style="{StaticResource PrimaryLocationLabelStyle}"
+                           Content="{Binding IssueLocation}"
+                           MouseLeftButtonDown="PrimaryLocationLabel_OnMouseLeftButtonDown"/>
+                    <vsImaging:CrispImage Grid.Row="1" 
+                                          Grid.Column="0" 
+                                          Height="16" Width="16"
+                                          Moniker="{Binding Severity, Converter={StaticResource SeverityToMonikerConverter}, Mode=OneWay}" 
+                                          Margin="0,0,5,0"/>
+                    <TextBlock Grid.Row="1" 
+                               Grid.Column="1" 
+                               Style="{StaticResource BaseTextBlockStyle}">
                         <Run Text="{Binding Description, Mode=OneWay}"/>
                         <Hyperlink NavigateUri="{Binding RuleHelpLink}" 
-                                   RequestNavigate="Hyperlink_OnRequestNavigate"
-                                   ToolTip="{Binding RuleKey, StringFormat={}(Open description of rule {0}), Mode=OneWay}">
+                                   RequestNavigate="Hyperlink_OnRequestNavigate">
+                            <Hyperlink.ToolTip>
+                                <TextBlock Text="{Binding Path=RuleKey, StringFormat=Open description of rule {0}}" />
+                            </Hyperlink.ToolTip>
                             <Run Text="{Binding RuleKey, StringFormat={}({0}), Mode=OneWay}" />
                         </Hyperlink>
                     </TextBlock>
